--- a/giangLab5/src/main/res/values/strings.xml
+++ b/giangLab5/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
 <resources>
+    <!--    /**-->
+    <!--    * Giang Nguyen-->
+    <!--    * Student# 301033256-->
+    <!--    * Lab 5 - COPM304-->
+    <!--    * Professor Haki Sharifi-->
+    <!--    * */-->
     <string name="app_name" translatable="false">GiangLab5</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
