--- a/giangLab5/src/main/res/values-fr/strings.xml
+++ b/giangLab5/src/main/res/values-fr/strings.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!--    /**-->
+    <!--    * Giang Nguyen-->
+    <!--    * Student# 301033256-->
+    <!--    * Lab 5 - COPM304-->
+    <!--    * Professor Haki Sharifi-->
+    <!--    * */-->
     <string name="navigation_drawer_open">Ouvrir le tiroir de navigation</string>
     <string name="navigation_drawer_close">23 / 5000 Translation results Fermer le panneau de navigation</string>
     <string name="nav_header_desc">En-tête de navigation</string>
